@@ -24,6 +24,7 @@ import org.junit.jupiter.api.Test;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
@@ -37,9 +38,9 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class SubmittedRecordsTest {
 
-    private static final Map<String, Object> PARTITION1 = Collections.singletonMap("subreddit", "apachekafka");
-    private static final Map<String, Object> PARTITION2 = Collections.singletonMap("subreddit", "adifferentvalue");
-    private static final Map<String, Object> PARTITION3 = Collections.singletonMap("subreddit", "asdfqweoicus");
+    private static final Map<String, Object> PARTITION1 = Map.of("subreddit", "apachekafka");
+    private static final Map<String, Object> PARTITION2 = Map.of("subreddit", "adifferentvalue");
+    private static final Map<String, Object> PARTITION3 = Map.of("subreddit", "asdfqweoicus");
 
     private AtomicInteger offset;
 
@@ -68,22 +69,22 @@ public class SubmittedRecordsTest {
     @Test
     public void testNoCommittedRecords() {
         for (int i = 0; i < 3; i++) {
-            for (Map<String, Object> partition : Arrays.asList(PARTITION1, PARTITION2, PARTITION3)) {
+            for (Map<String, Object> partition : List.of(PARTITION1, PARTITION2, PARTITION3)) {
                 submittedRecords.submit(partition, newOffset());
             }
         }
 
         CommittableOffsets committableOffsets = submittedRecords.committableOffsets();
         assertMetadata(committableOffsets, 0, 9, 3, 3, PARTITION1, PARTITION2, PARTITION3);
-        assertEquals(Collections.emptyMap(), committableOffsets.offsets());
+        assertEquals(Map.of(), committableOffsets.offsets());
 
         committableOffsets = submittedRecords.committableOffsets();
         assertMetadata(committableOffsets, 0, 9, 3, 3, PARTITION1, PARTITION2, PARTITION3);
-        assertEquals(Collections.emptyMap(), committableOffsets.offsets());
+        assertEquals(Map.of(), committableOffsets.offsets());
 
         committableOffsets = submittedRecords.committableOffsets();
         assertMetadata(committableOffsets, 0, 9, 3, 3, PARTITION1, PARTITION2, PARTITION3);
-        assertEquals(Collections.emptyMap(), committableOffsets.offsets());
+        assertEquals(Map.of(), committableOffsets.offsets());
     }
 
     @Test
@@ -94,7 +95,7 @@ public class SubmittedRecordsTest {
         CommittableOffsets committableOffsets = submittedRecords.committableOffsets();
         // Record has been submitted but not yet acked; cannot commit offsets for it yet
         assertFalse(committableOffsets.isEmpty());
-        assertEquals(Collections.emptyMap(), committableOffsets.offsets());
+        assertEquals(Map.of(), committableOffsets.offsets());
         assertMetadata(committableOffsets, 0, 1, 1, 1, PARTITION1);
         assertNoEmptyDeques();
 
@@ -102,7 +103,7 @@ public class SubmittedRecordsTest {
         committableOffsets = submittedRecords.committableOffsets();
         // Record has been acked; can commit offsets for it
         assertFalse(committableOffsets.isEmpty());
-        assertEquals(Collections.singletonMap(PARTITION1, offset), committableOffsets.offsets());
+        assertEquals(Map.of(PARTITION1, offset), committableOffsets.offsets());
         assertMetadataNoPending(committableOffsets, 1);
 
         // Everything has been ack'd and consumed; make sure that it's been cleaned up to avoid memory leaks
@@ -110,7 +111,7 @@ public class SubmittedRecordsTest {
 
         committableOffsets = submittedRecords.committableOffsets();
         // Old offsets should be wiped
-        assertEquals(Collections.emptyMap(), committableOffsets.offsets());
+        assertEquals(Map.of(), committableOffsets.offsets());
         assertTrue(committableOffsets.isEmpty());
     }
 
@@ -128,27 +129,27 @@ public class SubmittedRecordsTest {
 
         CommittableOffsets committableOffsets = submittedRecords.committableOffsets();
         // No records ack'd yet; can't commit any offsets
-        assertEquals(Collections.emptyMap(), committableOffsets.offsets());
+        assertEquals(Map.of(), committableOffsets.offsets());
         assertMetadata(committableOffsets, 0, 4, 2, 2, PARTITION1, PARTITION2);
         assertNoEmptyDeques();
 
         partition1Record2.ack();
         committableOffsets = submittedRecords.committableOffsets();
         // One record has been ack'd, but a record that comes before it and corresponds to the same source partition hasn't been
-        assertEquals(Collections.emptyMap(), committableOffsets.offsets());
+        assertEquals(Map.of(), committableOffsets.offsets());
         assertMetadata(committableOffsets, 0, 4, 2, 2, PARTITION1, PARTITION2);
         assertNoEmptyDeques();
 
         partition2Record1.ack();
         committableOffsets = submittedRecords.committableOffsets();
         // We can commit the first offset for the second partition
-        assertEquals(Collections.singletonMap(PARTITION2, partition2Offset1), committableOffsets.offsets());
+        assertEquals(Map.of(PARTITION2, partition2Offset1), committableOffsets.offsets());
         assertMetadata(committableOffsets, 1, 3, 2, 2, PARTITION1);
         assertNoEmptyDeques();
 
         committableOffsets = submittedRecords.committableOffsets();
         // No new offsets to commit
-        assertEquals(Collections.emptyMap(), committableOffsets.offsets());
+        assertEquals(Map.of(), committableOffsets.offsets());
         assertMetadata(committableOffsets, 0, 3, 2, 2, PARTITION1);
         assertNoEmptyDeques();
 
@@ -176,7 +177,7 @@ public class SubmittedRecordsTest {
         SubmittedRecord submittedRecord = submittedRecords.submit(PARTITION1, newOffset());
 
         CommittableOffsets committableOffsets = submittedRecords.committableOffsets();
-        assertEquals(Collections.emptyMap(), committableOffsets.offsets());
+        assertEquals(Map.of(), committableOffsets.offsets());
         assertMetadata(committableOffsets, 0, 1, 1, 1, PARTITION1);
 
         assertTrue(submittedRecord.drop(), "First attempt to remove record from submitted queue should succeed");
@@ -208,7 +209,7 @@ public class SubmittedRecordsTest {
 
         committableOffsets = submittedRecords.committableOffsets();
         // Even if SubmittedRecords::remove is broken, we haven't ack'd anything yet, so there should be no committable offsets
-        assertEquals(Collections.emptyMap(), committableOffsets.offsets());
+        assertEquals(Map.of(), committableOffsets.offsets());
         assertMetadata(committableOffsets, 0, 1, 1, 1, PARTITION2);
         assertNoEmptyDeques();
         // The only record for this partition has been removed; we shouldn't be tracking a deque for it anymore
@@ -217,14 +218,14 @@ public class SubmittedRecordsTest {
         recordToRemove.ack();
         committableOffsets = submittedRecords.committableOffsets();
         // Even though the record has somehow been acknowledged, it should not be counted when collecting committable offsets
-        assertEquals(Collections.emptyMap(), committableOffsets.offsets());
+        assertEquals(Map.of(), committableOffsets.offsets());
         assertMetadata(committableOffsets, 0, 1, 1, 1, PARTITION2);
         assertNoEmptyDeques();
 
         lastSubmittedRecord.ack();
         committableOffsets = submittedRecords.committableOffsets();
         // Now that the last-submitted record has been ack'd, we should be able to commit its offset
-        assertEquals(Collections.singletonMap(PARTITION2, partition2Offset), committableOffsets.offsets());
+        assertEquals(Map.of(PARTITION2, partition2Offset), committableOffsets.offsets());
         assertMetadata(committableOffsets, 1, 0, 0, 0, (Map<String, Object>) null);
         assertFalse(committableOffsets.hasPending());
 
@@ -338,7 +339,7 @@ public class SubmittedRecordsTest {
     }
 
     private void assertNoRemainingDeques() {
-        assertEquals(Collections.emptyMap(), submittedRecords.records, "Internal records map should be completely empty");
+        assertEquals(Map.of(), submittedRecords.records, "Internal records map should be completely empty");
     }
 
     @SafeVarargs
@@ -355,7 +356,7 @@ public class SubmittedRecordsTest {
     }
 
     private Map<String, Object> newOffset() {
-        return Collections.singletonMap("timestamp", offset.getAndIncrement());
+        return Map.of("timestamp", offset.getAndIncrement());
     }
 
     private void assertMetadataNoPending(CommittableOffsets committableOffsets, int committableMessages) {
